--- a/Smsgh.UssdFramework.Demo/Smsgh.UssdFramework.Demo.csproj
+++ b/Smsgh.UssdFramework.Demo/Smsgh.UssdFramework.Demo.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UssdActions\Menus.cs" />
+    <Compile Include="UssdActions\SayMyNameInputs.cs" />
     <Compile Include="UssdView.cs" />
   </ItemGroup>
   <ItemGroup>
