--- a/Smsgh.UssdFramework/Smsgh.UssdFramework.csproj
+++ b/Smsgh.UssdFramework/Smsgh.UssdFramework.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stores\InMemoryStore.cs" />
     <Compile Include="Stores\IStore.cs" />
     <Compile Include="Stores\RedisStore.cs" />
     <Compile Include="Ussd.cs" />
